2023-08-24T01:05:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5958191582 # 1144
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-24
* notice: last 14d: unq all: 11 36
* notice: prev accum: outdated-unq outdated-all / unq all: 449 776 / 474 812
* notice: next accum: outdated-unq outdated-all / unq all: 449 776 / 475 813
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-08-10 2023-08-23]

2023-08-23T16:19:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5953883025 # 1143
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-23
* notice: last 14d: unq all: 10 36
* notice: prev accum: outdated-unq outdated-all / unq all: 447 773 / 474 812
* notice: next accum: outdated-unq outdated-all / unq all: 449 776 / 474 812
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-08-09] / []

2023-08-23T08:18:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5948811952 # 1142
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-23
* notice: last 14d: unq all: 10 37
* notice: prev accum: outdated-unq outdated-all / unq all: 447 773 / 473 811
* notice: next accum: outdated-unq outdated-all / unq all: 447 773 / 474 812
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-08-09 2023-08-23]

2023-08-22T16:19:27Z: