@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-24T01:05:32Z",
+  "timestamp" : "2023-08-24T08:18:38Z",
   "count_outdated" : 776,
   "uniques_outdated" : 449,
-  "count" : 813,
-  "uniques" : 475,
+  "count" : 815,
+  "uniques" : 477,
   "clones" : [
     {
       "timestamp": "2023-08-10T00:00:00Z",
@@ -129,6 +129,15 @@
       "count_decinc": [ 0, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-08-24T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
     }
   ]
