@@ -1,6 +1,6 @@
 {
-  "count": 36,
-  "uniques": 11,
+  "count": 38,
+  "uniques": 12,
   "clones": [
     {
       "timestamp": "2023-08-10T00:00:00Z",
@@ -69,6 +69,11 @@
     },
     {
       "timestamp": "2023-08-23T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-08-24T00:00:00Z",
       "count": 2,
       "uniques": 2
     }
